--- a/grid.html
+++ b/grid.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  class="lebar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="bootstrap.min.css">
 </head>
-<body class="m-5">
+<body  class="lebar">
     <!-- <div style ="height: 900px;" class="container-fluid bg-primary border-dark m-5"> -->
-    <div class="container-fluid border-danger">
+    <div class="container-fluid border-kuning lebar">
 
-        <div style="height: 100px; border:solid black 2px;" class="row border-danger" >
+        <div class="row border-danger" >
             <div class="col-12">
               
             </div>
         </div>
     </div>
-    <div class="container-fluid border-danger">
+    <div class="container-fluid border-merah">
 
-        <div style="height: 100px; border:solid black 2px;" class="row border-danger" >
-            <div class="col-12">
+        <div class="row border-danger lebar" >
+            <div class="col-12 lebar">
                 
             </div>
         </div>
