--- a/fixedtop.html
+++ b/fixedtop.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
-<body  class="tinggi-container">
+<body class="tinggi-container overflow-auto">
  
 
       <div  style="margin-top: 55px;" class="container-fluid">
@@ -20,7 +20,7 @@
           <div class="col-lg-12">
               <nav style="background-color: rgb(0, 0, 0);" class="navbar navbar-expand-sm navbar-dark fixed-top h5 ">
              
-                <a class="navbar-brand" href="fixedtop.html">Portofolioku</a>
+                <a class="navbar-brand" href="fixedtop.html">Van Gogh</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarku" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -29,13 +29,13 @@
                 <div class="collapse navbar-collapse" id="navbarku">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="#about">|Sekilas|</a>
+                      <a class="nav-link" href="#about">|About|</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#biodata">|Biodata|</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#pengalaman">|Pengalaman|</a>
+                      <a class="nav-link" href="#pengalaman">|Artworks|</a>
                     </li>
                   </ul>
                 </div> 
@@ -56,9 +56,9 @@
           </div>
       </div>
 
-      <div class="container-fluid tinggi-container " id="about">
-        <center><h1>Sekilas</h1></center>
-        <div class="row tinggi-gambar align-items-center padding-pengalaman text-color  text-justify ">
+      <div class="container-fluid tinggi-container" id="about">
+        <center><h1>About</h1></center>
+        <div class="row tinggi-gambar align-items-center padding-pengalaman text-color text-justify ">
           <div class="col-lg-4 h-100 gambar-sekilas border-kuning"> </div>
           <div class="col-lg-4">
             <p class="huruf-pertama">
@@ -149,7 +149,7 @@
       </div>
 
       <div class="container-fluid tinggi-container " id="pengalaman">
-        <h1>Pengalaman</h1>
+        <h1>Artworks</h1>
           <!-- <div class="row h-100 padding-pengalaman"> -->
             <div class="row my-auto padding-pengalaman align-items-center">
 
