--- a/index.html
+++ b/index.html
@@ -60,29 +60,29 @@
         <center><h1>About</h1></center>
         <div class="row tinggi-gambar align-items-center padding-pengalaman text-color text-justify ">
           <!-- ini -->
-          <div class="col-lg-4 h-100 gambar-sekilas border-kuning"> </div>
+          <div class="col-lg-4 h-100 w-25 border-kuning gambar-sekilas"> </div>
           <!-- ini adalah gambar grid kolom pertama -->
           <div class="col-lg-4 h-100">
             <p class="huruf-pertama ">
            
-            Van Gogh is now one of the most well-known post-Impressionist painters, although he was not widely appreciated in his lifetime.Vincent Van Gogh was born on 30 March 1853 in Zundert in the southern Netherlands, the son of a pastor. In 1869, he took his first job, working in the Hague branch of an international art dealing firm. He began to write to his younger brother Theo, a correspondence which continued for the rest of Van Gogh's life.Van Gogh's job took him to London 
+            Van Gogh is now one of the most well-known post-Impressionist painters, although he was not widely appreciated in his lifetime.Vincent Van Gogh was born on 30 March 1853 in Zundert in the southern Netherlands, the son of a pastor. In 1869, he took his first job, working in the Hague branch of an international art dealing firm. He began to write to his younger brother Theo, a correspondence which continued for the rest of Van Gogh's life.Van Gogh's job took him to London and Paris, but he was not interested in the work and
             </p>
           </div>
           <div class="col-lg-4 h-100">
-            <p>  and Paris, but he was not interested in the work and was dismissed in 1876. He briefly became a teacher in England,  and then, deeply interested in Christianity, a preacher in a mining community in southern Belgium.In 1880, at the age of 27, he decided to become an artist. He moved around, teaching himself to draw and paint and receiving financial support from Theo. In 1886, Van Gogh joined Theo in Paris, and met many artists including Degas, Toulouse-Lautrec, Pissarro and Gauguin, with whom he became friends. 
+            <p>   was dismissed in 1876. He briefly became a teacher in England,  and then, deeply interested in Christianity, a preacher in a mining community in southern Belgium.In 1880, at the age of 27, he decided to become an artist. He moved around, teaching himself to draw and paint and receiving financial support from Theo. In 1886, Van Gogh joined Theo in Paris, and met many artists including Degas, Toulouse-Lautrec, Pissarro and Gauguin, with whom he became friends. His style changed significantly under the influence
             </p>
           </div>
         <!-- </div> -->
         <!-- <div class="row h-50 padding-pengalaman text-justify  text-color  pt-2"> -->
-          <div class="col-lg-4 w-100">
-            <p> His style changed significantly under the influence of Impressionism, becoming lighter and brighter. He painted a large number of self-portraits in this period. In 1888, Van Gogh moved to Provence in southern France, where he painted his famous series 'Sunflowers'. He invited Gauguin to join him but they soon began to quarrel and one night, Van Gogh threatened Gauguin with a razor. Deeply remorseful he then cut off part of his own ear.
+          <div class="col-lg-4 h-100 pt-2">
+            <p>  of Impressionism, becoming lighter and brighter. He painted a large number of self-portraits in this period. In 1888, Van Gogh moved to Provence in southern France, where he painted his famous series 'Sunflowers'. He invited Gauguin to join him but they soon began to quarrel and one night, Van Gogh threatened Gauguin with a razor. Deeply remorseful he then cut off part of his own ear.This was the first serious sign of the mental health
             </p>
           </div>
-          <div class="col-lg-4">
-              <p> This was the first serious sign of the mental health problems that were to afflict Van Gogh for the rest of his life. He spent time in psychiatric hospitals and swung between periods of inertia, depression and incredibly concentrated artistic activity, his work reflecting the intense colours and strong light of the countryside around him.On 27 July 1890, again suffering from depression, Van Gogh shot himself. He died two days later.
+          <div class="col-lg-4 h-100 pt-2">
+              <p>  problems that were to afflict Van Gogh for the rest of his life. He spent time in psychiatric hospitals and swung between periods of inertia, depression and incredibly concentrated artistic activity, his work reflecting the intense colours and strong light of the countryside around him.On 27 July 1890, again suffering from depression, Van Gogh shot himself. He died two days later.This was the first serious sign of the mental health problems that were
               </p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 h-100 pt-2">
               <p> This was the first serious sign of the mental health problems that were to afflict Van Gogh for the rest of his life. He spent time in psychiatric hospitals and swung between periods of inertia, depression and incredibly concentrated artistic activity, his work reflecting the intense colours and strong light of the countryside around him.On 27 July 1890, again suffering from depression, Van Gogh shot himself. He died two days later.
               </p>
           </div>
