--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="col-lg-12">
               <nav style="background-color: rgb(0, 0, 0);" class="navbar navbar-expand-sm navbar-dark fixed-top h5 ">
              
-                <a class="navbar-brand" href="fixedtop.html">Van Gogh</a>
+                <a class="navbar-brand" href="index.html">Van Gogh</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarku" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,9 @@
         <center><h1>About</h1></center>
         <div class="row tinggi-gambar align-items-center padding-pengalaman text-color text-justify ">
           <!-- ini -->
-          <div class="col-lg-4 h-100 w-25 border-kuning gambar-sekilas"> </div>
+          <div class="col-lg-4 h-100 gambar-sekilas"> 
+            <img src="film.png" height="260px" width="250px" class="border-kuning">
+          </div>
           <!-- ini adalah gambar grid kolom pertama -->
           <div class="col-lg-4 h-100">
             <p class="huruf-pertama ">
