lebih rapi lagi

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="container-fluid tinggi-container " id="pengalaman">
         <h1>Artworks</h1>
           <!-- <div class="row h-100 padding-pengalaman"> -->
-            <div class="row my-auto padding-pengalaman align-items-center">
+            <div class="row padding-pengalaman align-items-center">
 
               <div class="col-md-3 border-kuning gambar1 tinggi-baris"></div>
 
